Documented get all users
